<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context="com.example.healthifymobile.AddPagamentoActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="47dp">

    <EditText
        android:id="@+id/etMesCartaoAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boxedtext"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etAnoCartaoAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boxedtext"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddCard"
        app:layout_constraintTop_toBottomOf="@+id/textView30"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="412dp"
        android:layout_height="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/registotop" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/backward_arrow"
        android:onClick="onClickGoBack"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adicionar_cartao"
        android:textColor="@color/lisseblue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGoBack"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <com.braintreepayments.cardform.view.CardForm
        android:id="@+id/card_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView8" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/numero_cart_o"
        app:layout_constraintTop_toBottomOf="@+id/etNomeCartaoAdd"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/etNomeCartaoAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boxedtext"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCartaoNum"
        tools:layout_editor_absoluteX="49dp" />

    <TextView
        android:id="@+id/tvCartaoNum"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginTop="75dp"
        android:text="@string/nome_cart_o"
        app:layout_constraintBottom_toTopOf="@+id/etNmeroCartaoAdd"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.43"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/etNmeroCartaoAdd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/boxedtext"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/tvNome"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/btnAddCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lisseblue"
        android:onClick="addPaymentCard"
        android:text="@string/add_card"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/cvv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNmeroCartaoAdd" />

    <EditText
        android:id="@+id/etCvvCartaoAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boxedtext"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView28"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/mes"
        app:layout_constraintTop_toBottomOf="@+id/etCvvCartaoAdd"
        tools:layout_editor_absoluteX="6dp" />


    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/ano"
        app:layout_constraintTop_toBottomOf="@+id/etMesCartaoAdd"
        tools:layout_editor_absoluteX="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>